--- a/apps/generator/Dockerfile
+++ b/apps/generator/Dockerfile
@@ -11,9 +11,9 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 # Since 0.30.0 release Git is supported and required as a dependency
 # Since 0.14.0 release of html-template chromium is needed for pdf generation.
 # More custom packages for specific template should not be added to this dockerfile. Instead, we should come up with some extensibility solution.
-RUN apk --update add git chromium && \
-    rm -rf /var/lib/apt/lists/* && \
-    rm /var/cache/apk/*
+# The --no-cache prevents from caching of the package index which saves space by not storing the APK cache files.
+RUN apk --no-cache add git chromium && \
+    rm -rf /var/cache/apk/*
 
 # Installing latest released npm package
 RUN npm install -g @asyncapi/generator@$ASYNCAPI_GENERATOR_VERSION
